@@ -1,4 +1,4 @@
-name                = Dist-Zilla-Role-File-ChangeNotification
+name                = Dist-Zilla-Role-FileWatcher
 author              = Karen Etheridge <ether@cpan.org>
 copyright_holder    = Karen Etheridge
 copyright_year      = 2013
